get bot response using api

--- a/keywordrecognition/static/css/elizabot_test.css
+++ b/keywordrecognition/static/css/elizabot_test.css
@@ -57,6 +57,7 @@ table {
   scrollbar-width: none;
   /* Firefox */
   width: 100%;
+  min-width: 850px;
   max-width: 850px;
   max-height: 55vh;
   margin: 0 auto;
