eliza service fix fallback response

--- a/keywordrecognition/templates/admin/eliza_bot/elizabot_test.html
+++ b/keywordrecognition/templates/admin/eliza_bot/elizabot_test.html
@@ -84,7 +84,7 @@
             return response.response;
         } catch (error) {
             console.error("Error:", error);
-            return "error!"; // Return an empty string or handle the error accordingly
+            return "error! no data"; // Return an empty string or handle the error accordingly
         }
     }
 
