--- a/main/templates/admin/base.html
+++ b/main/templates/admin/base.html
@@ -203,7 +203,7 @@
                         </div>
                         <div class="info">
                             {% if perms|can_view_self %}
-                                <a href="{% jazzy_admin_url request.user request.current_app|default:"admin" %}" class="d-block">{{ request.user.name }}</a>
+                                <a href="{% jazzy_admin_url request.user request.current_app|default:"admin" %}" class="d-block">{{ request.user }}</a>
                             {% else %}
                                 <span class="d-block" style="color: white;">{{ request.user }}</span>
                             {% endif %}
@@ -222,20 +222,22 @@
 
                             {% if jazzmin_settings.navigation_expanded %}
                                 {% for app in side_menu_list %}
-                                    <li class="nav-header">{{ app.name }}</li>
-                                    {% for model in app.models %}
-                                        <li class="nav-item">
-                                            {% if model.url %}
-                                            <a href="{{ model.url }}" class="nav-link">
-                                                <i class="nav-icon {{ model.icon }}"></i> <p>{{ model.name }}</p>
-                                            </a>
-                                        {% else %}
-                                            <span class="nav-link disabled">
-                                                <i class="nav-icon {{ model.icon }}"></i> <p>{{ model.name }}</p>
-                                            </span>
-                                        {% endif %}
-                                        </li>
-                                    {% endfor %}
+                                    {% if app.app_label not in exclude_app_list %}
+                                        <li class="nav-header">{{ app.name }}</li>    
+                                        {% for model in app.models %}
+                                            <li class="nav-item">
+                                                {% if model.url %}
+                                                <a href="{{ model.url }}" class="nav-link">
+                                                    <i class="nav-icon {{ model.icon }}"></i> <p>{{ model.name }}</p>
+                                                </a>
+                                            {% else %}
+                                                <span class="nav-link disabled">
+                                                    <i class="nav-icon {{ model.icon }}"></i> <p>{{ model.name }}</p>
+                                                </span>
+                                            {% endif %}
+                                            </li>
+                                        {% endfor %}
+                                    {% endif %}
                                 {% endfor %}
                             {% else %}
                                 {% for app in side_menu_list %}
