--- a/keywordrecognition/templates/admin/eliza_bot/elizabot_test.html
+++ b/keywordrecognition/templates/admin/eliza_bot/elizabot_test.html
@@ -10,7 +10,7 @@
 {% block breadcrumbs %}
 <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="{% url 'admin:index' %}">{% trans 'Home' %}</a></li>
-    <li class="breadcrumb-item"><a href="{% url 'admin:app_list' app_label='keywordrecognition' %}">{% trans 'Keyword Recognition' %}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'admin:app_list' app_label='keywordrecognition' %}">{% trans 'Keyword Chatbot' %}</a></li>
     <li class="breadcrumb-item"><a href="{% url 'admin:keywordrecognition_elizabot_changelist' %}">{% trans 'Eliza Bots' %}</a></li>
     <li class="breadcrumb-item active"><a href="{% url 'admin:keywordrecognition_elizabot_change' object_id=elizabot.id %}">{{ elizabot }}</a></li>
 </ol>
