--- a/main/templates/admin/index.html
+++ b/main/templates/admin/index.html
@@ -16,7 +16,7 @@
 
 {% block content %}
     <div class="col-12 pb-4">
-        <h1>Eliza bots count: {{ eliza_bots_count }}</h1>
+        <h1>Eliza bots count: {{ bots_count }}</h1>
     </div>
     {% get_side_menu using="app_list" as dashboard_list %}
     {% if dashboard_list %}
