keywordrecognition synonym matching

--- a/keywordrecognition/templates/admin/eliza_bot/elizabot_test.html
+++ b/keywordrecognition/templates/admin/eliza_bot/elizabot_test.html
@@ -38,6 +38,7 @@
 {% endblock %}
 
 {% block extrajs %}
+{{ block.super }}
   <script>
     // The form we receive user input from
     let chatForm = document.querySelector("#chatform");
