--- a/keywordrecognition/templates/admin/eliza_bot/elizabot_change_form.html
+++ b/keywordrecognition/templates/admin/eliza_bot/elizabot_change_form.html
@@ -5,21 +5,77 @@
 {% block object-tools-items %}
 <div class="object-tools d-flex flex-column">
     {{ block.super }}
+    {% if original.pk %}
     <a href="{% url 'admin:elizabot-test-bot' object_id=original.id %}" class="btn btn-outline-info btn-block mt-3">
         {% trans 'Test Bot' %}
     </a>
-    <a class="related-widget-wrapper-link add-related btn btn-outline-info btn-block mt-3" data-popup="yes" id="shareBot">Share</a>
+    <a class="related-widget-wrapper-link btn btn-outline-info btn-block mt-3" data-popup="yes" id="uploadDataBot">Upload Data</a>
+    <a class="related-widget-wrapper-link btn btn-outline-info btn-block mt-3" data-popup="yes" id="shareBot">Share</a>
+    {% endif %}
 </div>
 {% endblock %}
 
 {% block extrajs %}
-    {{  block.super }}
+    {{ block.super }}
+    {% if original.pk %}
     <script>
-        let iframeHTML = '<div class="col-4 text-center d-flex"><a href="{% url 'redoc' %}" class="btn btn-primary p-4 rounded"><i class="fa fa-code fa-2x d-block p-5"></i> API</a></div>'
-        $(document).ready(function() {
-            $('#shareBot').click(function() {
-              showModal("Share", iframeHTML, {'data': {'lookup': null}});
+        let iframeHTML = '<div class="col-4 text-center d-flex"><a href="{% url 'redoc' %}" class="btn btn-primary p-4 rounded"><i class="fa fa-code fa-2x d-block p-5"></i> API</a></div>';
+        let formUploadDataHTML = '<form id="upload-form" enctype="multipart/form-data" action="{% url 'eliza-bot-load-data' id=original.pk %}">{% csrf_token %}<input type="file" name="file" id="file-input"><button type="button" class="btn btn-outline-info btn-block mt-3" id="upload-button">Upload</button><div id="upload-message" style="margin-top: 10px;"></div></form>';
+        document.addEventListener('DOMContentLoaded', function() {
+            let shareButton = document.getElementById('shareBot');
+            let uploadDataModal = document.getElementById('uploadDataBot');
+
+            shareButton.addEventListener('click', function() {
+                showModal("Share", iframeHTML, {'data': {'lookup': null}});
             });
-        });                          
+
+            uploadDataModal.addEventListener('click', function() {
+                showModal("Upload", formUploadDataHTML, {'data': {'lookup': null}});
+
+                let form = document.getElementById('upload-form');
+                let fileInput = document.getElementById('file-input');
+                let uploadButton = document.getElementById('upload-button');
+                let uploadMessage = document.getElementById('upload-message');
+
+                uploadButton.addEventListener('click', function() {
+                    console.log('upload data');
+                    uploadMessage.innerText = 'Uploading file...';
+                    uploadMessage.style.color = '#000';
+
+                    let formData = new FormData(form);
+                    let url = "{% url 'eliza-bot-load-data' id=original.pk %}";
+    
+                    fetch(url, {
+                        method: 'POST',
+                        headers: {
+                            'X-CSRFToken': '{{ csrf_token }}'
+                        },
+                        body: formData
+                    })
+                    .then(function(response) {
+                        if (response.ok) {
+                            // Success message
+                            console.log('File uploaded successfully.');
+                            uploadMessage.innerText = 'File uploaded successfully.';
+                            uploadMessage.style.color = 'green';
+                            // Clear file input
+                            fileInput.value = '';
+                        } else {
+                            // Error message
+                            console.log('File upload failed.');
+                            uploadMessage.innerText = 'File upload failed.';
+                            uploadMessage.style.color = 'red';
+                        }
+                    })
+                    .catch(function(error) {
+                        // Error message
+                        console.log('File upload failed:', error);
+                        uploadMessage.innerText = 'File upload failed: ' + error;
+                        uploadMessage.style.color = 'red';
+                    });
+                });
+            });
+        });
     </script>
+    {% endif %}
 {% endblock %}
