nlp intent, entity, response upload feature

--- a/main/templates/admin/change_list.html
+++ b/main/templates/admin/change_list.html
@@ -122,4 +122,5 @@
     {% comment %} Custom always enable the related_modal_active settings {% endcomment %}
     <script type="text/javascript" src="{% static 'jazzmin/plugins/bootstrap-show-modal/bootstrap-show-modal.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'jazzmin/js/related-modal.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/upload.js' %}"></script>
 {% endblock %}
