--- a/main/templates/admin/base.html
+++ b/main/templates/admin/base.html
@@ -221,6 +221,9 @@
                                 {% endfor %}
                             </select>
                         </div>
+                        {% if bot_type == "nlpbot" %}
+                            <button id="trainButton" class="btn btn-outline-info mt-3">Train Model</button>
+                        {% endif %}
                         <ul class="nav nav-pills nav-sidebar flex-column {{ jazzmin_ui.sidebar_list_classes }}" data-widget="treeview" role="menu" data-collapsible="false">
 
                             {% comment %} <li class="nav-item">
@@ -429,6 +432,43 @@
                 .catch(function(error) {
                     console.error('Error updating context:', error);
                 });
+        });
+    });
+
+    let trainButton = document.getElementById("trainButton")
+
+    trainButton.addEventListener("click", function() {
+        const csrfToken = '{{ csrf_token }}'
+        const url = "{% url 'nlp-bot-train' id=selected_bot.id %}";
+
+        trainButton.innerText = 'Training bot ...';
+        
+        fetch(url, {
+            method: 'GET',
+            headers: {
+                'X-CSRFToken': csrfToken
+            },
+        })
+        .then(function (response) {
+            if (response.ok) {
+                // Success message
+                console.log('Model training started.');
+                trainButton.innerText = 'Succeeded';
+                setTimeout(function() {
+                    trainButton.innerText = 'Train Model';
+                }, 1000);
+            } else {
+                // Error message
+                console.log('Model training failed.');
+                trainButton.innerText = 'Failed!';
+                setTimeout(function() {
+                    trainButton.innerText = 'Train Model';
+                }, 1000);
+            }
+        })
+        .catch(function (error) {
+            // Error message
+            console.log('Model training failed:', error);
         });
     });
     
